[gd_scene load_steps=10 format=3 uid="uid://dngsbhjanqitk"]

[ext_resource type="Texture2D" uid="uid://dfswp5kouilmg" path="res://Assets/background/Sir Krabs.png" id="1_nfc68"]
[ext_resource type="Script" path="res://scenes/HandleAds.gd" id="2_i6nwb"]
[ext_resource type="Texture2D" uid="uid://fyapdndc18it" path="res://Assets/shops/krabs.webp" id="3_vcdsa"]

[sub_resource type="GDScript" id="GDScript_7lpeg"]
script/source = "extends Node2D

signal removeMe(node: String)

func _ready() -> void:
	MusicPlayer.setMusic(-2)

func _on_touch_screen_button_pressed() -> void:
	removeMe.emit(\"Ads\")
"

[sub_resource type="Animation" id="Animation_exgbr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_mxrrm"]
resource_name = "rubBalls"
length = 0.51
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7i8a"]
_data = {
"RESET": SubResource("Animation_exgbr"),
"rubBalls": SubResource("Animation_mxrrm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oscki"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtlrh"]

[node name="Ads" type="Node2D"]
script = SubResource("GDScript_7lpeg")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(10.0045, 6.58537)
texture = ExtResource("1_nfc68")
centered = false
hframes = 3
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_s7i8a")
}
autoplay = "rubBalls"

[node name="Return" type="Node2D" parent="."]
position = Vector2(1779, 893)
scale = Vector2(2.76, 2.76)

[node name="RichTextLabel" type="RichTextLabel" parent="Return"]
offset_left = 37.0
offset_top = -314.0
offset_right = 478.0
offset_bottom = -117.0
scale = Vector2(0.26087, 0.26087)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 119
text = "Return"

[node name="TouchScreenButton" type="TouchScreenButton" parent="Return"]
position = Vector2(84.3623, -298.667)
scale = Vector2(5.68, 1.49002)
shape = SubResource("RectangleShape2D_oscki")

[node name="HandleAds" type="Node2D" parent="."]
script = ExtResource("2_i6nwb")
isReal = true

[node name="GenFrenzy" type="TouchScreenButton" parent="HandleAds"]
position = Vector2(102, 298)
scale = Vector2(10.28, 10.28)
shape = SubResource("RectangleShape2D_wtlrh")

[node name="Krabs1" type="Sprite2D" parent="HandleAds/GenFrenzy"]
position = Vector2(0, -0.389105)
scale = Vector2(0.0435967, 0.0435967)
texture = ExtResource("3_vcdsa")

[node name="RichTextLabel" type="RichTextLabel" parent="HandleAds/GenFrenzy"]
offset_left = -9.92218
offset_top = 10.0195
offset_right = 663.078
offset_bottom = 265.019
scale = Vector2(0.0353307, 0.0353307)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 9
theme_override_font_sizes/normal_font_size = 120
bbcode_enabled = true
text = "Generator Frenzy"

[node name="ClickGalore" type="TouchScreenButton" parent="HandleAds"]
position = Vector2(102, 623)
scale = Vector2(10.28, 10.28)
shape = SubResource("RectangleShape2D_wtlrh")

[node name="Krabs2" type="Sprite2D" parent="HandleAds/ClickGalore"]
position = Vector2(0, -0.389105)
scale = Vector2(0.0435967, 0.0435967)
texture = ExtResource("3_vcdsa")

[node name="RichTextLabel" type="RichTextLabel" parent="HandleAds/ClickGalore"]
offset_left = -9.92218
offset_top = 10.0195
offset_right = 663.078
offset_bottom = 265.019
scale = Vector2(0.0353307, 0.0353307)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 9
theme_override_font_sizes/normal_font_size = 120
bbcode_enabled = true
text = "Click galore"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Return/TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="pressed" from="HandleAds/GenFrenzy" to="HandleAds" method="_on_gen_frenzy_pressed"]
[connection signal="pressed" from="HandleAds/ClickGalore" to="HandleAds" method="_on_click_galore_pressed"]
